src/test/resources/parse/NonCompanionTraitField.casc
trait NonCompanionTraitField {
    a: i32
}